Revision history for Perl module HTML::Summary

0.018 2014-01-13
    - Added all prereqs to PREREQ_PM in Makefile.PL
    - added "use warnings" to all modules
    - Reformatted Changes (this file) as per CPAN::Changes::Spec

0.017 1999-07-01
    - improved handling of JIS in Lingua::JA::Jtruncate

0.016 1999-04-19
    - text.pl moved to t/all.t to invoke Test::Harness
    - changes to bugs in the test script (from Lupe Christoph)

0.015 1999-03-30
    - README changed to include a description of what HTML::Summary does.
    - bug in test.pl for Mac fixed by using File::Spec to create path.

0.01  1998-09-17
    - original version; created by h2xs 1.18
