@@ -1,5 +1,6 @@
 package Lingua::JA::Jcode;
 use warnings;
+use 5.6.0;
 
 ;######################################################################
 ;#
